Bug fix to make privacy policy links visible.

--- a/less/theme.less
+++ b/less/theme.less
@@ -259,6 +259,15 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 	padding-bottom: 1em;
 }
 
+.gdpr-footer {
+    background-color: @spare-color;
+    padding: 15px 0;
+    
+    a {
+        padding: 0 10px;
+		color: @nav-color;
+    }
+}
 
 
 
